# electrosales_net

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
electrosales_net/: asgi.py  settings.py  urls.py  wsgi.py
network/: admin.py  models.py  serializers.py  urls.py
network/migrations/: 0001_initial.py
network/views/: product.py  provider.py
tests/: factories.py  fixtures.py
tests/network/products/: test_create_product.py  test_detail_product.py  test_product_delete.py  test_product_list.py
tests/network/providers/: test_create_provider.py  test_delete_provider.py  test_detail_provider.py  test_providers_list.py
tests/users/: test_profile.py  test_signup.py  test_update_password.py
users/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
